--- a/package.json
+++ b/package.json
@@ -14,8 +14,12 @@
     "@types/react": "^19.0.1",
     "@types/react-dom": "^19.0.2",
     "astro": "^5.0.5",
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.14.4",
+    "gsap": "^3.12.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "tailwind-merge": "^2.5.5",
     "tailwindcss": "^3.4.16"
   }
 }
